--- a/graflog.cabal
+++ b/graflog.cabal
@@ -1,5 +1,5 @@
 name:                graflog
-version:             0.1.2
+version:             1.0.0
 synopsis:            Monadic correlated log events
 description:         Please see README.md
 homepage:            https://github.com/m-arnold/graflog#readme
@@ -22,7 +22,7 @@ library
                      , aeson
                      , bytestring
   default-language:    Haskell2010
-  default-extensions:  GeneralizedNewtypeDeriving
+  default-extensions:  GeneralizedNewtypeDeriving DeriveFunctor
 
 test-suite graflog-test
   type:                exitcode-stdio-1.0
