--- a/graflog.cabal
+++ b/graflog.cabal
@@ -22,7 +22,7 @@ library
                      , aeson
                      , bytestring
   default-language:    Haskell2010
-  default-extensions:  GeneralizedNewtypeDeriving DeriveFunctor
+  default-extensions:  GeneralizedNewtypeDeriving DeriveFunctor FlexibleContexts FlexibleInstances
 
 test-suite graflog-test
   type:                exitcode-stdio-1.0
@@ -33,6 +33,8 @@ test-suite graflog-test
                      , test-fixture
                      , hspec
                      , mtl
+                     , text
+                     , aeson
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   default-extensions:  ConstraintKinds DeriveGeneric FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving KindSignatures LambdaCase MultiParamTypeClasses NamedFieldPuns OverloadedStrings RankNTypes ScopedTypeVariables TypeOperators DuplicateRecordFields
