--- a/graflog.cabal
+++ b/graflog.cabal
@@ -1,5 +1,5 @@
 name:                graflog
-version:             6.0.0
+version:             6.1.0
 synopsis:            Monadic correlated log events
 description:         Please see README.md
 homepage:            https://github.com/m-arnold/graflog#readme
@@ -22,6 +22,7 @@ library
                      , aeson
                      , bytestring
                      , containers
+                     , mtl
   default-language:    Haskell2010
   default-extensions:  GeneralizedNewtypeDeriving DeriveFunctor FlexibleContexts FlexibleInstances
 
